// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit-mutliDB Case client to cloud as master 1`] = `
Object {
  "_fake": true,
  "_id": "ObjectID",
  "items": Array [],
  "table": 10,
}
`;

exports[`commit-mutliDB Case client to cloud as master 2`] = `
Array [
  Object {
    "_id": "ObjectID",
    "collectionName": "Model",
    "doc": Object {
      "_fake": true,
      "_id": "ObjectID",
      "items": Array [],
      "table": 10,
    },
    "type": "create",
    "uuid": "uuid-v1",
  },
]
`;

exports[`commit-mutliDB Case client to cloud as master 3`] = `
Object {
  "_id": "ObjectID",
  "items": Array [],
  "table": 10,
}
`;

exports[`commit-mutliDB Case client to cloud as master 4`] = `
Object {
  "_id": "ObjectID",
  "items": Array [],
  "table": 10,
}
`;

exports[`commit-mutliDB Case client to cloud as master 5`] = `
Object {
  "_id": "ObjectID",
  "items": Array [],
  "status": "inProgress",
  "table": 10,
}
`;

exports[`commit-mutliDB Case cloud to client as master 1`] = `
Object {
  "_id": "ObjectID",
  "items": Array [],
  "table": 9,
}
`;

exports[`commit-mutliDB Case cloud to client as master 2`] = `
Object {
  "_id": "ObjectID",
  "items": Array [],
  "table": 9,
}
`;

exports[`commit-mutliDB Case cloud to client as master 3`] = `
Object {
  "_id": "ObjectID",
  "items": Array [
    Object {
      "_id": "ObjectID",
      "name": "fanta",
    },
  ],
  "table": 9,
}
`;

exports[`commit-mutliDB Test off master 1`] = `
Object {
  "_fake": true,
  "_id": "ObjectID",
  "items": Array [],
  "table": 10,
}
`;

exports[`commit-mutliDB Test off master 2`] = `null`;

exports[`commit-mutliDB Test off master 3`] = `null`;

exports[`commit-mutliDB Test off master 4`] = `
Object {
  "_id": "ObjectID",
  "items": Array [],
  "table": 10,
}
`;
